# xseturgent

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README  README.md  config.mk  seturgent.1  seturgent.c  test.sh  xseturgent.1  xseturgent.c
.github/workflows/: ci.yml
debian/: changelog  control  copyright  watch
